# master-programming-task

lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  makefile  tests_iterator
lab4/include/: iterator.hpp
lab5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_variant
lab5/include/: variant.hpp
lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lab6/include/: json.hpp
lab6/parser_helper/: CMakeLists.txt  Makefile  cmake_install.cmake  makefile  tests_parser_helper
lab6/parser_helper/include/: parser.hpp  quoted_string.hpp  variant_decorator.hpp
lab6/parser_helper/tests/: quoted_string.cpp  variant_decorator.cpp
lab6/tests/: json.cpp
lab7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests_type_map
lab7/include/: type_map.hpp
